--- a/assets/scss/estilos.css
+++ b/assets/scss/estilos.css
@@ -11986,4 +11986,8 @@ textarea.form-control-lg {
   text-align: center;
   margin-bottom: 1rem;
   text-transform: uppercase;
+}
+
+.glosary-content h2, .glosary-content .h2 {
+  text-transform: uppercase;
 }/*# sourceMappingURL=estilos.css.map */
