--- a/assets/scss/estilos.scss
+++ b/assets/scss/estilos.scss
@@ -19,4 +19,9 @@
     h2 {
         text-transform: uppercase;
     }
+    .glosary-item {
+        // position: relative !important;
+        // left: auto !important;
+        // top: auto !important;
+    }
 }
