--- a/assets/scss/estilos.scss
+++ b/assets/scss/estilos.scss
@@ -1,5 +1,16 @@
 @import '../bootstrap-5.3.2/scss/bootstrap.scss';
 
+// Dark mode
+
+$color-mode-type: data;
+
+@include color-mode(dark) {
+  .element {
+    color: var(--bs-primary-text-emphasis);
+    background-color: var(--bs-primary-bg-subtle);
+  }
+}
+
 // Estilos generales
 
 .glosary-nav {
