--- a/assets/scss/estilos.css
+++ b/assets/scss/estilos.css
@@ -102,9 +102,9 @@
   --bs-code-color: #d63384;
   --bs-highlight-color: #212529;
   --bs-highlight-bg: #fff3cd;
-  --bs-border-width: 1px;
+  --bs-border-width: 2px;
   --bs-border-style: solid;
-  --bs-border-color: #dee2e6;
+  --bs-border-color: #000;
   --bs-border-color-translucent: rgba(0, 0, 0, 0.175);
   --bs-border-radius: 0.375rem;
   --bs-border-radius-sm: 0.25rem;
@@ -226,11 +226,11 @@ h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
 }
 
 h1, .h1 {
-  font-size: calc(1.375rem + 1.5vw);
+  font-size: calc(1.325rem + 0.9vw);
 }
 @media (min-width: 1200px) {
   h1, .h1 {
-    font-size: 2.5rem;
+    font-size: 2rem;
   }
 }
 
@@ -8308,7 +8308,7 @@ textarea.form-control-lg {
 }
 
 .fs-1 {
-  font-size: calc(1.375rem + 1.5vw) !important;
+  font-size: calc(1.325rem + 0.9vw) !important;
 }
 
 .fs-2 {
@@ -11932,7 +11932,7 @@ textarea.form-control-lg {
 }
 @media (min-width: 1200px) {
   .fs-1 {
-    font-size: 2.5rem !important;
+    font-size: 2rem !important;
   }
   .fs-2 {
     font-size: 2rem !important;
@@ -11984,8 +11984,20 @@ textarea.form-control-lg {
   background-color: var(--bs-primary-bg-subtle);
 }
 
+html {
+  scroll-padding-top: 4rem;
+}
+
 body {
   font-style: normal;
+}
+
+.border {
+  border-bottom-width: 4px !important;
+}
+
+.navbar-brand {
+  font-size: 32px;
 }
 
 .glosary-nav .nav-link {
@@ -11997,6 +12009,8 @@ body {
   text-align: center;
   margin-bottom: 1rem;
   text-transform: uppercase;
+  font-family: Merriweather;
+  font-size: 24px;
 }
 
 .glosary-content h2, .glosary-content .h2 {
