--- a/assets/bootstrap-5.3.2/scss/bootstrap-utilities.css
+++ b/assets/bootstrap-5.3.2/scss/bootstrap-utilities.css
@@ -7,7 +7,7 @@
 [data-bs-theme=light] {
   --bs-blue: #0d6efd;
   --bs-indigo: #6610f2;
-  --bs-purple: #6f42c1;
+  --bs-purple: #7266FF;
   --bs-pink: #d63384;
   --bs-red: #dc3545;
   --bs-orange: #fd7e14;
