--- a/assets/scss/estilos.css
+++ b/assets/scss/estilos.css
@@ -9,7 +9,7 @@
 [data-bs-theme=light] {
   --bs-blue: #0d6efd;
   --bs-indigo: #6610f2;
-  --bs-purple: #6f42c1;
+  --bs-purple: #7266FF;
   --bs-pink: #d63384;
   --bs-red: #dc3545;
   --bs-orange: #fd7e14;
@@ -4003,7 +4003,7 @@ textarea.form-control-lg {
   color: var(--bs-navbar-color);
   background-color: transparent;
   border: var(--bs-border-width) solid var(--bs-navbar-toggler-border-color);
-  border-radius: var(--bs-navbar-toggler-border-radius);
+  border-radius: 0;
   transition: var(--bs-navbar-toggler-transition);
 }
 @media (prefers-reduced-motion: reduce) {
@@ -4014,10 +4014,16 @@ textarea.form-control-lg {
 .navbar-toggler:hover {
   text-decoration: none;
 }
+.navbar-toggler:hover.border {
+  border-color: #7266FF;
+}
+.navbar-toggler:hover.border .navbar-toggler-icon {
+  color: #7266FF !important;
+}
 .navbar-toggler:focus {
   text-decoration: none;
   outline: 0;
-  box-shadow: 0 0 0 var(--bs-navbar-toggler-focus-width);
+  box-shadow: 0 0 0 rgba(114, 102, 255, 0.5);
 }
 
 .navbar-toggler-icon {
@@ -4538,7 +4544,7 @@ textarea.form-control-lg {
   --bs-accordion-btn-icon-transition: transform 0.2s ease-in-out;
   --bs-accordion-btn-active-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23052c65'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
   --bs-accordion-btn-focus-border-color: #D0F979;
-  --bs-accordion-btn-focus-box-shadow: 0 0 0 0.25rem rgba(169, 142, 218, 0.25);
+  --bs-accordion-btn-focus-box-shadow: 0 0 0 0.25rem rgba(170, 163, 255, 0.25);
   --bs-accordion-body-padding-x: 1.25rem;
   --bs-accordion-body-padding-y: 1rem;
   --bs-accordion-active-color: #000;
@@ -12011,6 +12017,18 @@ body {
   text-transform: uppercase;
   font-family: Merriweather;
   font-size: 24px;
+}
+.glosary-nav .nav-link:hover {
+  background-color: #7266FF;
+  color: #fff;
+}
+
+.navbar-toggler.border:hover {
+  border-color: #7266FF !important;
+}
+.navbar-toggler.border:hover .navbar-toggler-icon {
+  color: #7266FF !important;
+  fill: #7266FF !important;
 }
 
 .glosary-content h2, .glosary-content .h2 {
