--- a/assets/scss/estilos.scss
+++ b/assets/scss/estilos.scss
@@ -40,6 +40,21 @@ body {
         text-transform: uppercase;
         font-family: $headings-font-family;
         font-size: 24px;
+        &:hover {
+            background-color: $purple;
+            color: $white;
+        }
+    }
+}
+.navbar-toggler{
+    &.border {
+        &:hover {
+            border-color: $purple !important;
+            .navbar-toggler-icon {
+                color: $purple !important;
+                fill: $purple !important;
+            }
+        }
     }
 }
 .glosary-content {
