--- a/assets/bootstrap-5.3.2/scss/_variables.scss
+++ b/assets/bootstrap-5.3.2/scss/_variables.scss
@@ -442,7 +442,7 @@ $body-secondary-color:      rgba($body-color, .75) !default;
 $body-secondary-bg:         $gray-200 !default;
 
 $body-tertiary-color:       rgba($body-color, .5) !default;
-$body-tertiary-bg:          $gray-100 !default;
+$body-tertiary-bg:          #F6F5FF !default; //$gray-100 !default;
 
 $body-emphasis-color:       $black !default;
 
